--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "node-mailer": "^0.1.1",
     "nodemon": "^3.0.1",
+    "saslprep": "^1.0.3",
     "uuid": "^9.0.1"
   }
 }
