--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "multer": "^1.4.5-lts.1",
     "node-mailer": "^0.1.1",
     "nodemon": "^3.0.1",
+    "peer": "^1.0.2",
     "saslprep": "^1.0.3",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   }
 }
